# fred139-project

./: .env.example  .eslintrc.json  .gitignore  AUTO-SAVE-IMPLEMENTATION-GUIDE.md  AUTO-SAVE-TEST.md  CLICKUP-FINAL-SUMMARY.md  CLICKUP-ROADMAP-SUMMARY.md  CLICKUP-WORKSPACE-URL.txt  CONSOLIDATION-COMPLETE.md  DEAL-ANALYSIS-REPORT.md  Dockerfile  EXECUTION-SUMMARY.md  GMAIL-OAUTH-SETUP.md  HOME-PC-SETUP-GUIDE.md  HOME-PC-TRANSITION-EMAIL.md  HUBSPOT-AUTHENTICATION-COMPLETE.md  QUICK-EMAIL-SUMMARY.txt  QUICK-HOME-SETUP.txt  README.md  SECURITY-ISSUE-RESOLVED.md  SEO-STRATEGY-BRICKFACE.md  SETUP-HOME-PC-SYNC.ps1  SETUP.md  add-deals-to-hubspot.js  audit-email-inbox-oauth.js  audit-email-inbox.js  auto-save-service.ps1  brickface-enterprise.code-workspace  clickup-roadmap-complete.json  create-clickup-workspace.ps1  create-hubspot-task.js  deals-enriched.json  end-work-simple.ps1  end-work.ps1  enhanced-auto-save-complete-integration.ps1  enhanced-profile.ps1  enhanced-start-work.ps1  enrich-and-add-deals.js  extract-gmail-attachments.js  gmail-deals-export.json  (+23 more)
.claude/: settings.local.json
agents/: EXAMPLE.md  QUICKSTART.md  README.md  USAGE.md
deal-attachments/: attachment-index.json
integrations/google-workspace-mcp/: pyproject.toml
integrations/google-workspace-mcp/src/: google_sheets_mcp.py
integrations/google-workspace-mcp/src/google_workspace_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orchestration/: EXECUTION-SUMMARY.md  linkedin-ads-samples-for-approval.md  microsoft-ads-campaign-config.md  sales-dashboard-build.md
(+32 files in other folders)
